==> aws-samples/aws-stm32-ml-at-edge-accelerator/stm32/Middleware/ARM/trusted-firmware-m/platform/ext/target/nuvoton/m2351/target_cfg.c <==
#include "cmsis.h"
#include "target_cfg.h"
#include "Driver_MPC.h"
#include "platform_description.h"
#include "device_definition.h"
#include "region_defs.h"
#include "tfm_plat_defs.h"
#include "region.h"
#include "tfm_secure_api.h"
#define ARRAY_SIZE(arr) (sizeof(arr)/sizeof(arr[0]))
#define NSCCFG_CODENSC  1
#define PERIPHERALS_BASE_NS_START (0x40000000)
#define PERIPHERALS_BASE_NS_END   (0x4FFFFFFF)
#define ENABLE_CPU0_SYSTEM_RESET_REQUEST (1U << 4U)
#define SCB_AIRCR_WRITE_MASK ((0x5FAUL << SCB_AIRCR_VECTKEY_Pos))
#define SPNIDEN_SEL_STATUS (0x01u << 7)
#define SPNIDEN_STATUS     (0x01u << 6)
#define SPIDEN_SEL_STATUS  (0x01u << 5)
#define SPIDEN_STATUS      (0x01u << 4)
#define NIDEN_SEL_STATUS   (0x01u << 3)
#define NIDEN_STATUS       (0x01u << 2)
#define DBGEN_SEL_STATUS   (0x01u << 1)
#define DBGEN_STATUS       (0x01u << 0)
#define All_SEL_STATUS (SPNIDEN_SEL_STATUS | SPIDEN_SEL_STATUS | \
                        NIDEN_SEL_STATUS | DBGEN_SEL_STATUS)

enum tfm_plat_err_t init_debug(void)
{
    /* Set UART0 to NS for debug message */
    SCU_SET_PNSSET(UART0_Attr);

    return TFM_PLAT_ERR_SUCCESS;
}

enum tfm_plat_err_t nvic_interrupt_target_state_cfg(void)
{
    /* Target every interrupt to NS; unimplemented interrupts will be WI */
    for (uint8_t i=0; i<sizeof(NVIC->ITNS)/sizeof(NVIC->ITNS[0]); i++) {
        NVIC->ITNS[i] = 0xFFFFFFFF;
    }

#ifdef SECURE_UART1
    /* UART1 is a secure peripheral, so its IRQs have to target S state */
    NVIC_ClearTargetState(UARTRX1_IRQn);
    NVIC_ClearTargetState(UARTTX1_IRQn);
    NVIC_ClearTargetState(UART1_IRQn);
#endif

    return TFM_PLAT_ERR_SUCCESS;
}

void sau_and_idau_cfg(void)
{
    uint32_t i;

    /* Enables SAU */
    TZ_SAU_Enable();

    for(i = 0; i < ARRAY_SIZE(sau_cfg); i++) {
        SAU->RNR = i;
        SAU->RBAR = sau_cfg[i].RBAR & SAU_RBAR_BADDR_Msk;
        SAU->RLAR = (sau_cfg[i].RLAR & SAU_RLAR_LADDR_Msk) |
            (sau_cfg[i].nsc ? SAU_RLAR_NSC_Msk : 0U) |
            SAU_RLAR_ENABLE_Msk;
    }

}

enum tfm_plat_err_t mpc_init_cfg(void)
{
    /* Secure COnfiguration Setup */
    SCU_Setup();

    /* Set UART0 for Non-secure */
    SCU_SET_PNSSET(UART0_Attr);

    /* Set TIMER2 for Non-secure */
    SCU_SET_PNSSET(TMR23_Attr);

    return TFM_PLAT_ERR_SUCCESS;
}
